<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.onboarding.OnboardingActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:drawableEnd="@drawable/icon_skip"
        android:onClick="start"
        android:padding="10dp"
        android:text="@string/skip_btn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/get_started_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/greycliff_bold"
            android:onClick="start"
            android:radius="30dp"
            android:text="@string/get_started_btn"
            android:textColor="#fff"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/icon_prev"
            android:onClick="prevSlide"
            android:text="@string/prev_btn"
            android:textAllCaps="false"
            android:visibility="invisible" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="?attr/selectableItemBackground"
            android:drawableEnd="@drawable/icon_next"
            android:onClick="nextSlide"
            android:text="@string/next_btn"
            android:textAllCaps="false" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>